--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,13 +1,50 @@
-.some-tweet {
+article {
+  border: 4px solid;
+  padding: 20px;
+  margin-bottom: 30px;
 }
 
-.some-tweet header {
+#tweet-text {
+  margin-top: 0px;
+  padding: 0% 3% 0% 3%;
+}
+
+article hr {
+  display: flex;
+  align-self: center;
+  border-top: solid 4px;
+  margin-bottom: 0px;
+}
+
+article header {
   display: flex;
   justify-content: space-between;
+  padding: 0% 3% 0% 3%;
 }
 
-.some-tweet footer {
+article footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: medium;
+  padding: 0% 3% 0% 3%;
+}
+
+#icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #4056A1;
+}
+
+#icons .icon {
+  padding: 7%;
+}
+
+.hover-art {
+  box-shadow: 7px 7px #9AA8DA;
+}
+
+.hover-icon {
+  color: darkorange;
 }
