--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,6 +4,7 @@ nav {
   position: fixed;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 120px;
   padding: 0em 1.5em 0em 1.5em;
@@ -12,10 +13,9 @@ nav {
 #name {
  font-family: 'Bungee', cursive;
  font-size: 2em;
- margin-top: 1em;
 }
 
-.tweet-header {
+#tweet-header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,6 +23,27 @@ nav {
   margin-top: 5px;
 }
 
+#smartphone {
+  display: none;
+}
+
 .write {
   margin-bottom: 15px
+}
+
+@media only screen and (max-width: 1024px) {
+  nav {
+    background-color: transparent;
+   }
+
+  #tweet-header {
+    display: none;
+  }
+
+  #smartphone {
+    display: flex;
+    align-items: center;
+    font-size: 40px;
+  }
+
 }
