--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -32,6 +32,8 @@ textarea {
   padding: 5px 10px 5px 10px;
 }
 
-.counter-over {
+.error {
   color: crimson;
+  font-weight: bold;
+  margin-bottom: 0px;
 }
