--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@ nav {
   width: 100%;
   height: 120px;
   padding: 0em 1.5em 0em 1.5em;
+  margin-top: 0px;
  }
 
 #name {
@@ -27,7 +28,7 @@ nav {
   display: none;
 }
 
-.write {
+nav p {
   margin-bottom: 15px
 }
 
