--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -37,3 +37,9 @@ textarea {
   font-weight: bold;
   margin-bottom: 0px;
 }
+
+.over {
+  color: crimson;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
