--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -26,6 +26,7 @@ article header {
   margin-top: 0px;
   padding: 0% 3% 0% 3%;
   word-break: break-all;
+  word-break: break-word;
 }
 
 article hr {
