make tweet container take up 90% of parent

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,6 +33,10 @@ main {
   margin-right: 5%;
 }
 
+#tweet-container {
+  width: 90%;
+}
+
 @media only screen and (min-width: 1024px) {
   #content {
     display: flex;
